<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/schedule_meeting"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMeeting"
            />

        <EditText
            android:id="@+id/etNrupul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nrupul_dev"
            android:paddingLeft="20dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_bg"
            android:text="@string/tue_22_december_2020"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNrupul" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="260dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rectangle_bg"
            android:padding="10dp"
            android:text="@string/_11_30_am"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNrupul"
            android:layout_marginLeft="220dp" />

        <TextView
            android:id="@+id/tvInvite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_to_invite"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            />
        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prateek"
            android:paddingLeft="20dp"
            android:drawableRight="@drawable/search_vector"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInvite" />

        <ImageView
            android:id="@+id/imPrateek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@drawable/prateek_vector_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <ImageView
            android:id="@+id/ivJefff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/jeff_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.231"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSearch" />

        <View
            android:id="@+id/viewImage"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/view_grey"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imPrateek"
            />

        <EditText
            android:id="@+id/etPrateek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/prateek_vector_image"
            android:drawableRight="@drawable/check_vector"
            android:drawablePadding="10dp"
            android:hint="@string/prateek_shukla"
            android:textStyle="bold"
            android:layout_margin="30dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewImage" />

        <EditText
            android:id="@+id/etJeff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:drawableLeft="@drawable/jeff_vector"
            android:drawableRight="@drawable/jeff_tag"

            android:drawablePadding="10dp"
            android:hint="@string/jeff_bezos"
            android:textColorHint="@color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPrateek" />

        <View
            android:id="@+id/viewJeff"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/view_grey"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etJeff"
            />

        <TextView
            android:id="@+id/tvSlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/slack_vector"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:text="@string/notify_people_on_slack"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewJeff" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:background="@color/button_blue"
            android:text="Create Meeting"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSlack"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>